-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.12.0, Lustre 2.13.0, Lustre 2.12.1
-
DNE
-
3
-
9223372036854775807
sanity-quota test_1 is failing in a DNE configuration, review-dne-part-4, with
'user write success, but expect EDQUOT'
meaning that the user write, dd, should not have succeeded.
Looking at the failure at https://testing.whamcloud.com/test_sets/43baf332-e791-11e8-b67f-52540065bddc , the last lines seen in the client test_log is
Disk quotas for usr quota_usr (uid 60000):
Filesystem kbytes quota limit grace files quota limit grace
/mnt/lustre 10240* 0 10240 - 1 0 0 -
lustre-MDT0000_UUID
0 - 0 - 1 - 0 -
lustre-MDT0001_UUID
0 - 0 - 0 - 0 -
lustre-MDT0002_UUID
0 - 0 - 0 - 0 -
lustre-MDT0003_UUID
0 - 0 - 0 - 0 -
lustre-OST0000_UUID
0 - 0 - - - - -
lustre-OST0001_UUID
0 - 0 - - - - -
lustre-OST0002_UUID
0 - 0 - - - - -
lustre-OST0003_UUID
0 - 0 - - - - -
lustre-OST0004_UUID
0 - 0 - - - - -
lustre-OST0005_UUID
10240* - 10240 - - - - -
lustre-OST0006_UUID
0 - 0 - - - - -
lustre-OST0007_UUID
0 - 0 - - - - -
Total allocated inode limit: 0, total allocated block limit: 10240
uid 60000 is using default file quota setting
Files for user (quota_usr):
File: '/mnt/lustre/d1.sanity-quota/f1.sanity-quota-0'
Size: 11534336 Blocks: 20480 IO Block: 4194304 regular file
Device: 2c54f966h/743766374d Inode: 144119902892982281 Links: 1
Access: (0644/-rw-r--r--) Uid: (60000/quota_usr) Gid: (60000/quota_usr)
Access: 2018-11-13 20:03:03.000000000 +0000
Modify: 2018-11-13 20:03:07.000000000 +0000
Change: 2018-11-13 20:03:07.000000000 +0000
Birth: -
sanity-quota test_1: @@@@@@ FAIL: user write success, but expect EDQUOT
There are no errors or anything to indicate that there was a problem in any of the console or dmesg logs.
This may be related to or the same as LU-5245. Although this test failed in October several times with the same error message, these test failures have many errors in the logs.
It looks like this test started failing again on 2018-11-13.
Logs for other recent failures are at
https://testing.whamcloud.com/test_sets/52c657cc-e8d6-11e8-86c0-52540065bddc
https://testing.whamcloud.com/test_sets/9608d2d6-e79f-11e8-bfe1-52540065bddc
https://testing.whamcloud.com/test_sets/b126d406-e889-11e8-b67f-52540065bddc
- is duplicated by
-
LU-9609 sanity-quota test_1: project write success, but expect edquot
-
- Resolved
-
- is related to
-
LU-9326 sanity-quota test_2: group create success, but expect EDQUOT
-
- Open
-
-
LU-12128 sanity-quota test_1: user write success, but expect EDQUOT
-
- Closed
-
-
LU-11687 allow "lfs fid2path" on open-unlinked files
-
- Resolved
-
- is related to
-
LU-5245 sanity-quota test_1: user write success, but expect EDQUOT
-
- Resolved
-
-
LU-11390 sanity-quota test_61: test timeout
-
- Resolved
-
-
LU-11425 Support quota for DoM
-
- Resolved
-