lustre/osc/osc_request.c
@@ -1751,7 +1751,7 @@ static int osc_brw_fini_request(struct ptlrpc_request *req, int rc)
 		CDEBUG(D_QUOTA, "setdq for [%u %u %u] with valid %#llx, flags %x\n",
 		       body->oa.o_uid, body->oa.o_gid, body->oa.o_projid,
 		       body->oa.o_valid, body->oa.o_flags);
-		       osc_quota_setdq(cli, qid, body->oa.o_valid,
+		       osc_quota_setdq(cli, req->rq_xid, qid, body->oa.o_valid,
 				       body->oa.o_flags);
         }
 
